--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}"/>
 </head>
-<body>
+<body class="{{ theme_class }}">
     {% block content %}{% endblock %}
     <script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
