--- a/templates/index.html
+++ b/templates/index.html
@@ -1,26 +1,18 @@
 {% extends "base.html" %}
 
-{% block title %}Acess Portal{% endblock %}
+{% block title %}Access Portal{% endblock %}
 
 {% block content %}
-    <h1>Only Certain People Are Allowed In.<br>Will You Be One Of Them?</br></h1>
-    <input
-        type="text"
-        id="usernameInput"
-        placeholder="Enter the secret phrase"
-    />
-    <button onclick="loginAndGlow()">Login & Get Token</button>
+<h1>
+    Only Certain People Are Allowed In.<br>
+    Will You Be One Of Them?
+</h1>
 
-    <div id="rightAboveTokenSection" class="hidden">
-        
-    </div>
+<input type="text" id="usernameInput" placeholder="Enter the secret phrase" />
+<input type="text" id="displayNameInput" placeholder="Enter your username for chatroom" />
+<button onclick="loginAndGlow()">
+    Login & Enter Rooms
+</button>
 
-    <br></br>
-    <div id="tokenSection" class="hidden">
-        <textarea id="tokenBox" readonly></textarea>
-        <button onclick="unlockGlow()">Unlock Secret Glow</button>
-    </div>
-
-    <div id="response"></div>
+<div id="response" class="hidden"></div>
 {% endblock %}
-
