--- a/templates/index.html
+++ b/templates/index.html
@@ -9,10 +9,10 @@
 </h1>
 
 
-<input type="text" id="displayNameInput" placeholder="Enter your username for chatroom" />
-<input type="text" id="usernameInput" placeholder="Enter the secret phrase" />
+<input type="text" id="displayNameInput" placeholder="Username"/>
+<input type="text" id="usernameInput" placeholder="Ssecret phrase"/>
 <button onclick="loginAndGlow()">
-    Login & Enter Rooms
+    Try
 </button>
 
 <div id="response" class="hidden"></div>
