--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 
 <input type="text" id="displayNameInput" placeholder="Username"/>
 <input type="text" id="usernameInput" placeholder="Ssecret phrase"/>
-<button onclick="loginAndGlow()">
+<button id="tryButton" onclick="loginAndGlow()">
     Try
 </button>
 
